angular-boss_fight/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-boss-fight
  labels:
    app: angular-boss-fight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-boss-fight
  template:
    metadata:
      labels:
        app: angular-boss-fight
    spec:
      containers:
        - name: angular-boss-fight
          image: vakile/image-valentin-legay:1.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
