angular-boss_fight/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-boss-fight
spec:
  type: LoadBalancer
  selector:
    app: angular-boss-fight
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
