angular-boss_fight/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-boss-fight-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - app.valentin.website
    secretName: app-valentin-tls
  rules:
    - host: app.valentin.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-boss-fight
                port:
                  number: 80
